@@ -1,8 +1,8 @@
-@comment $NetBSD: PLIST,v 1.3 2002/08/25 21:50:34 jlam Exp $
-lib/tcl8.3/pdflib/pdflib_tcl.a
-lib/tcl8.3/pdflib/pdflib_tcl.la
-lib/tcl8.3/pdflib/pdflib_tcl.so
-lib/tcl8.3/pdflib/pdflib_tcl.so.0
-lib/tcl8.3/pdflib/pdflib_tcl.so.0.0
-lib/tcl8.3/pdflib/pkgIndex.tcl
-@dirrm lib/tcl8.3/pdflib
+@comment $NetBSD: PLIST,v 1.4 2004/03/20 23:36:33 minskim Exp $
+lib/tcl8.4/pdflib/pdflib_tcl.a
+lib/tcl8.4/pdflib/pdflib_tcl.la
+lib/tcl8.4/pdflib/pdflib_tcl.so
+lib/tcl8.4/pdflib/pdflib_tcl.so.0
+lib/tcl8.4/pdflib/pdflib_tcl.so.0.0
+lib/tcl8.4/pdflib/pkgIndex.tcl
+@dirrm lib/tcl8.4/pdflib
